Feito durante o curso tecnico

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="pac.css">
 </head>
 
-<body background="pac/Fundo01.jpg">
+<body background="pac/fundo01.jpg">
 
   <br><br>
   <center>
